tests/fixtures/invalid/pow_float_set_float.py
# Cannot call pow() with Float, Set[int], Float
x = pow(1.0, {1, 2, 3}, 1.0)
